fixed z-index bug

--- a/src/components/calendar/event/Event.css
+++ b/src/components/calendar/event/Event.css
@@ -8,7 +8,7 @@
 .event:hover {
   background-color: rgba(185, 145, 65, 0.9);
   max-width: 100% !important;
-  z-index: 99999 !important;
+  z-index: 1000 !important;
 }
 
 .eventContent {
